# Python_2

./: Homework_Python2_Virabyan.ipynb  pyproject.toml
